Change name to one that is availible

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "iclip-cli",
+    "name": "interclip",
     "version": "0.0.1",
     "description": "Interclip for the terminal",
     "repository": "https://github.com/aperta-principium/iclip-cli",
