--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Install NPM dependencies
+      run: npm ci
     - name: Install iclip-cli locally
       run: npm i -g .
     - name: Test code to URL
