--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "interclip",
     "version": "0.0.5",
     "description": "Interclip for the terminal",
-    "repository": "https://github.com/aperta-principium/iclip-cli",
+    "repository": "https://github.com/interclip/cli",
     "main": "bin/index.js",
     "bin": {
         "iclip": "./bin/index.js"
