--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "clipboardy": "^2.3.0",
         "dashdash": "^2.0.0",
         "figlet": "^1.5.0",
+        "form-data": "^4.0.0",
         "node-fetch": "^2.6.1",
         "qrcode-terminal": "^0.12.0",
         "validator": "^13.5.2"
