--- a/package.json
+++ b/package.json
@@ -18,20 +18,26 @@
     "author": "Filip Troníček",
     "license": "MIT",
     "dependencies": {
+        "@types/form-data": "^2.5.0",
         "clipboardy": "^2.3.0",
         "dashdash": "^2.0.0",
         "figlet": "^1.5.0",
+        "form-data": "^4.0.0",
+        "mime-types": "^2.1.35",
         "node-fetch": "^2.6.1",
         "qrcode-terminal": "^0.12.0",
+        "simple-xml-to-json": "^1.0.9",
         "validator": "^13.5.2"
     },
     "devDependencies": {
         "@types/dashdash": "^1.14.1",
         "@types/figlet": "^1.5.4",
+        "@types/mime-types": "^2.1.1",
         "@types/node": "^16.11.10",
         "@types/node-fetch": "^2.5.12",
         "@types/qrcode-terminal": "^0.12.0",
         "@types/validator": "^13.7.0",
+        "aws-sdk": "^2.1111.0",
         "nodemon": "^2.0.15",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.2"
